[project]
name = "danawa-mcp-skill"
version = "0.1.0"
description = "다나와 제품 검색 및 비교를 위한 MCP Skill (FastMCP + Playwright)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["danawa", "mcp", "playwright", "product-search", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=2.14",
    "playwright>=1.50",
    "pydantic>=2.0",
    "loguru>=0.7",
    "tenacity>=8.2",
    "anyio>=4.0",
]

[project.scripts]
danawa-mcp = "danawa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/danawa_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyright>=1.1",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default arguments
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = ["danawa_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
